--- a/code/frontend/js/public/index.html
+++ b/code/frontend/js/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Web site created using create-react-app" />
-    <title>DAW Project</title>
+    <title>QRreport</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
